--- a/Mydesktop/portage/make.conf
+++ b/Mydesktop/portage/make.conf
@@ -8,18 +8,18 @@ CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
 FFLAGS="${COMMON_FLAGS}"
-MAKEOPTS="-j4 -l4"
-EMERGE_DEFAULT_OPTS="--jobs=4 --load-average=4 --with-bdeps y --complete-graph y --fail-clean y"
-PORTAGE_NICENESS=12
+MAKEOPTS="-j5 -l4"
+EMERGE_DEFAULT_OPTS="--jobs=5 --load-average=4 --with-bdeps y --complete-graph y --fail-clean y"
+PORTAGE_NICENESS=1
 PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 ACCEPT_LICENSE="*"
 VIDEO_CARDS="nouveau"
-INPUT_DEVICES="libinput synaptics"
+#INPUT_DEVICES="libinput synaptics"
 LINGUAS="en"
 CURL_SSL="openssl"
 FEATURES="candy fixlafiles unmerge-orphans"
-
-USE="alsa X elogind nvenc"
+#USE="aac alsa cdr dvd dvdr elogind mpeg2 mp3 mpeg ffmpeg X x264 yuv4mpeg"
+USE="dbus elogind ffmpeg jpeg jpeg2k pipewire pulseaudio -systemd X"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
@@ -32,4 +32,4 @@ LC_MESSAGES=C
 GRUB_PLATFORMS="efi-64"
 
 
-GENTOO_MIRRORS="http://gentoo.mirrors.tera-byte.com/ https://mirror.csclub.uwaterloo.ca/gentoo-distfiles/ http://mirror.csclub.uwaterloo.ca/gentoo-distfiles/"
+GENTOO_MIRRORS="https://mirrors.nxtgen.com/gentoo-mirror/gentoo-source/ http://mirrors.nxtgen.com/gentoo-mirror/gentoo-source/"
